--- a/composer.json
+++ b/composer.json
@@ -30,11 +30,13 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "symfony/dependency-injection": "^3.2",
         "friendsofphp/php-cs-fixer": "^2.1",
-        "mmoreram/php-formatter": "^1.3"
+        "mmoreram/php-formatter": "^1.3",
+        "doctrine/data-fixtures": "^1.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^3.0"
+        "symfony/phpunit-bridge": "^3.0",
+        "hautelook/alice-bundle": "^1.3"
     },
     "scripts": {
         "symfony-scripts": [
