--- a/src/Duti/Bundle/Core/Resources/config/repositories.yml
+++ b/src/Duti/Bundle/Core/Resources/config/repositories.yml
@@ -3,5 +3,11 @@ services:
     repository.space:
         class: Duti\Bundle\Core\Repository\SpaceRepository
         factory: ["@doctrine.orm.entity_manager", getRepository]
-        arguments: [Duti\Bundle\Core\Entity\DataSource]
+        arguments: [Duti\Bundle\Core\Entity\Space]
+
+    repository.project:
+        class: Duti\Bundle\Core\Repository\ProjectRepository
+        factory: ["@doctrine.orm.entity_manager", getRepository]
+        arguments: [Duti\Bundle\Core\Entity\Project]
+
 
